--- a/locale/ru_RU.utf8/LC_MESSAGES/messages.po
+++ b/locale/ru_RU.utf8/LC_MESSAGES/messages.po
@@ -1,53 +1,55 @@
 msgid ""
 msgstr ""
-"Content-Transfer-Encoding: 8bit\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
-"Language: ru\n"
-"Language-Team: \n"
-"Last-Translator: \n"
-"MIME-Version: 1.0\n"
-"PO-Revision-Date: \n"
-"POT-Creation-Date: \n"
-"Project-Id-Version: \n"
-"X-Domain: WT\n"
-"X-Generator: Poedit 2.0.1\n"
+"Content-Type: : text/plain; charset=UTF-8\n"
+"Language: ru_RU\n"
+"X-Domain: messages\n"
 
 #: core/pages/login.tpl:5
+msgctxt "messages"
 msgid "login"
-msgstr ""
+msgstr "вход"
 
 #: core/pages/login.tpl:15
+msgctxt "messages"
 msgid "email"
-msgstr ""
+msgstr "почта"
 
 #: core/pages/login.tpl:23
+msgctxt "messages"
 msgid "password"
-msgstr ""
+msgstr "пароль"
 
 #: core/pages/login.tpl:6
+msgctxt "messages"
 msgid "one"
 msgstr ""
 
 #: core/pages/login.tpl:6
+msgctxt "messages"
 msgid "two"
 msgstr ""
 
 #: core/pages/login.tpl:6
+msgctxt "messages"
 msgid "three"
 msgstr ""
 
 #: core/pages/login.tpl:8
+msgctxt "messages"
 msgid "sagi"
 msgstr ""
 
 #: core/pages/login.tpl:10
+msgctxt "messages"
 msgid "http://www.php.net/"
 msgstr ""
 
 #: core/pages/login.tpl:10
+msgctxt "messages"
 msgid "PHP website"
 msgstr ""
 
 #: core/pages/login.tpl:30
+msgctxt "messages"
 msgid "submit"
 msgstr ""
